Prevent scroling when menu is visible on tablet

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -15,7 +15,7 @@ body {
   color: $blue;
   &.menu-mobile-visible {
     max-height: 100vh;
-    overflow-y: hidden;
+    overflow: hidden;
   }
 }
 
